--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caninos y Felinos</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="sass/styles.css">
 </head>
 <body>
     <header class="encabezado">
         <div class="contendor-titulo">
             <h1 class="titulo">Centro Veterinario <span class="titulo2">Caninos y Felinos</span></h1>
         </div>  
-        <nav>
+        <nav class="navegador">
             <ul class="list-nav">
-                <li class="list-item"><a class="list-link" href="#">Servicios</a></li>
-                <li class="list-item"><a class="list-link" href="#">Productos</a></li>
-                <li class="list-item"><a class="list-link" href="#">Guardería</a></li>
-                <li class="list-item"><a class="list-link" href="#">Promociones</a></li>
+                <li class="list-item" id="li-1"><a class="list-link" href="#">. Servicios .</a></li>
+                <li class="list-item"><a class="list-link" href="#">. Productos .</a></li>
+                <li class="list-item"><a class="list-link" href="#">. Guardería .</a></li>
+                <li class="list-item" id="li-4"><a class="list-link" href="#">. Promociones .</a></li>
             </ul>
         </nav>        
     </header>
