--- a/index.html
+++ b/index.html
@@ -25,18 +25,26 @@
             <article class="card">
                 <h2 class="subtitulo">Cuidado y educacion para su perro</h2>
                 <div class="contendor-info">
-                    <p class="texto1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur dignissimos assumenda culpa itaque id esse hic quos, blanditiis molestias aliquid quod?</p>
-                    <p class="texto2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <img class="imagen" src="../Caninos-y-Felinos/assets/perro.jpg" alt="perro">
+                    <div class="textos">
+                        <p class="texto1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur dignissimos assumenda culpa itaque id esse hic quos, blanditiis molestias aliquid quod?</p>
+                        <p class="texto2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img">  
+                        <img class="imagen" src="../Caninos-y-Felinos/assets/perro.jpg" alt="perro">.
+                    </div>
                     <a class="enlace" href="#">Ver mas...</a>
                 </div>
             </article>
             <article class="card">
                 <h2 class="subtitulo">Salir de viaje con su mascota</h2>
                 <div class="contendor-info">
-                    <p class="texto1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur dignissimos assumenda culpa itaque id esse hic quos, blanditiis molestias aliquid quod?</p>
-                    <p class="texto2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                    <img class="imagen" src="../Caninos-y-Felinos/assets/perro.jpg" alt="perro">
+                    <div class="textos">
+                        <p class="texto1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur dignissimos assumenda culpa itaque id esse hic quos, blanditiis molestias aliquid quod?</p>
+                        <p class="texto2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div class="img">
+                        <img class="imagen" src="../Caninos-y-Felinos/assets/gato.jpg" alt="gato">
+                    </div>
                     <a class="enlace" href="#">Ver mas...</a>
                 </div>
             </article>
