--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caninos y Felinos</title>
-    <link rel="stylesheet" href="sass/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header class="encabezado">
         <div class="contendor-titulo">
-            <h1 class="titulo">Centro Veterinario <span class="titulo2">Caninos y <span class="titulo3">Felinos</span></span></h1>
+            <h1 class="titulo">Centro Veterinario <span class="titulo2">Caninos y <span
+                        class="titulo3">Felinos</span></span></h1>
         </div>
         <nav class="navegador">
             <ul class="list-nav">
@@ -57,7 +58,7 @@
             <div class="titulo-formulario">
                 <h2 class="titulo-cita">Solicitar Cita Medica</h2>
             </div>
-            <form class="formulario1">                
+            <form class="formulario1">
                 <div>
                     <label for="">Mascota</label>
                     <input type="text" placeholder="Ingrese Nombre">
