--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <p class="texto2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="img">
-                        <img class="imagen" src="../Caninos-y-Felinos/assets/perro.jpg" alt="perro">.
+                        <img class="imagen" src="assets/perro.jpg" alt="perro">.
                     </div>
                     <a class="enlace" href="#">Ver mas...</a>
                 </div>
@@ -48,7 +48,7 @@
                         <p class="texto2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
                     </div>
                     <div class="img">
-                        <img class="imagen" src="../Caninos-y-Felinos/assets/gato.jpg" alt="gato">
+                        <img class="imagen" src="assets/gato.jpg" alt="gato">
                     </div>
                     <a class="enlace" href="#">Ver mas...</a>
                 </div>
